--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,1 +1,9 @@
-Deny from all
+<IfModule mod_rewrite.c>
+        RewriteEngine On
+
+        # Removes index.php from ExpressionEngine URLs
+        RewriteCond $1 !\.(gif|jpe?g|png)$ [NC]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule ^(.*)$ /index.php/$1 [L]
+</IfModule>
