--- a/src/composer.json
+++ b/src/composer.json
@@ -2,6 +2,7 @@
 	"require": {
 		"swiftmailer/swiftmailer": "v5.0.2",
 		"twig/twig": "v1.14.0",
-		"twig/extensions": "dev-master"
+		"twig/extensions": "dev-master",
+		"twilio/sdk": "dev-master"
 	}
 }
